Use cabal for building

--- a/wxSnake.cabal
+++ b/wxSnake.cabal
@@ -15,7 +15,7 @@ category:            Game
 build-type:          Simple
 cabal-version:       >=1.8
 
-executable wxSnake
-  -- main-is:             
+executable snake
+  main-is:             Main.hs
   -- other-modules:       
   build-depends:       base ==4.5.*, random ==1.0.*, wx ==0.13.*
