--- a/wxSnake.cabal
+++ b/wxSnake.cabal
@@ -18,8 +18,7 @@ cabal-version:       >= 1.18
 executable snake
   main-is:             Main.hs
   hs-source-dirs:      src
-  -- other-modules:       
-  build-depends:       base ==4.6.*,
-                       cabal-macosx,
-                       random ==1.0.*,
-                       wx ==0.90.*
+  -- other-modules:
+  build-depends:       base
+                     , random
+                     , wx
